Theatre Edit page added. Enhancement pending

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -3,6 +3,7 @@ theatre.view.title = Theatre | View
 movie.add.title=Movie | Add
 movie.view.title=Movie | View
 theatre.add.title=Theatre | Add
+theatre.edit.title=Theatre | Edit
 schedule.add.title=Schedule | Add
 branch.title=Branch
 user.title=User 
