Profile page done

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -8,5 +8,6 @@ schedule.add.title=Schedule | Add
 branch.title=Branch
 user.title=User 
 user.login.title=Login
+user.profile.title=Your Account
 template=Template
 home.title=Home | Dashboard
