Bug Resolved, New Page added.

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -2,6 +2,7 @@ common.copyright =Copyright &copy; MASP (S) Sdn Bhd 2021
 theatre.view.title = Theatre | View
 movie.add.title=Movie | Add
 movie.view.title=Movie | View
+movieavailable.view.title=Movie Available
 theatre.add.title=Theatre | Add
 theatre.edit.title=Theatre | Edit
 schedule.add.title=Schedule | Add
