Voucher page done, proceeding on announcement

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -6,7 +6,9 @@ movieavailable.view.title=Movie Available
 theatre.add.title=Theatre | Add
 theatre.edit.title=Theatre | Edit
 schedule.add.title=Schedule | Add
-voucher.title= Voucher
+voucher.view.title= Voucher | View
+voucher.add.title= Voucher | Add
+announcement.title = Announcement
 branch.title=Branch
 user.title=User 
 user.login.title=Login
