ScheduleView Page complete

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -6,6 +6,7 @@ movieavailable.view.title=Movie Available
 theatre.add.title=Theatre | Add
 theatre.edit.title=Theatre | Edit
 schedule.add.title=Schedule | Add
+schedule.view.title=Schedule | View
 voucher.view.title= Voucher | View
 voucher.add.title= Voucher | Add
 announcement.title = Announcement
