Added member page

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -9,6 +9,7 @@ schedule.add.title=Schedule | Add
 schedule.view.title=Schedule | View
 voucher.view.title= Voucher | View
 voucher.add.title= Voucher | Add
+member.view.title = Member
 announcement.title = Announcement
 branch.title=Branch
 user.title=User 
