--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -10,6 +10,8 @@ schedule.view.title=Schedule | View
 voucher.view.title= Voucher | View
 voucher.add.title= Voucher | Add
 member.view.title = Member
+ticket.view.title = Ticket | View
+ticket.sales.title = Ticket | Sales
 announcement.title = Announcement
 branch.title=Branch
 user.title=User 
