--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -14,6 +14,7 @@ ticket.view.title = Ticket | View
 ticket.sales.title = Ticket | Sales
 announcement.title = Announcement
 notifcation.title = Notification
+transaction.view.title = Transaction | View
 branch.title=Branch
 user.title=User 
 user.login.title=Login
