Added edit theatre type

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -15,6 +15,7 @@ ticket.sales.title = Ticket | Sales
 announcement.title = Announcement
 notifcation.title = Notification
 transaction.view.title = Transaction | View
+theatre.type.title = Theatre | Type
 branch.title=Branch
 user.title=User 
 user.login.title=Login
